[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/UIArt/Flag.png" type="Texture" id=1]
[ext_resource path="res://Images/UIArt/LightRays.png" type="Texture" id=2]
[ext_resource path="res://Fonts/AlMadiri.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/UI/WinScreen.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.110165, 0.0912725, 0.140625, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="LightRays" type="Sprite" parent="."]
position = Vector2( 954.987, 342.161 )
texture = ExtResource( 2 )

[node name="Flag" type="Sprite" parent="."]
position = Vector2( 1233.38, 850.945 )
scale = Vector2( 0.767217, 0.767217 )
texture = ExtResource( 1 )

[node name="ColorRect2" type="Panel" parent="."]
margin_left = 742.477
margin_top = 908.643
margin_right = 1749.48
margin_bottom = 1142.64
rect_scale = Vector2( 0.35, 0.35 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2"]
margin_left = 47.0
margin_top = 13.0
margin_right = 961.0
margin_bottom = 252.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.682353, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Back[/center]"
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="Panel" parent="."]
margin_left = 526.0
margin_top = 617.0
margin_right = 2709.0
margin_bottom = 1350.0
rect_scale = Vector2( 0.35, 0.35 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect3"]
margin_left = 61.017
margin_top = 13.3098
margin_right = 2159.02
margin_bottom = 716.31
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 1, 0.682353, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Victory! 
The Darkness at the center of the world is filled with light. [/center]"
text = "Victory! 
The Darkness at the center of the world is filled with light. "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="ColorRect2" to="." method="_on_ColorRect2_gui_input"]
[connection signal="mouse_exited" from="ColorRect2" to="." method="_on_ColorRect2_mouse_exited"]
